--- a/atividade-pascoa/pascoa_mundo.html
+++ b/atividade-pascoa/pascoa_mundo.html
@@ -17,8 +17,8 @@
             <div id="bloco-l">
                 <img src="pascoa.png"/>
                 <div>
-                    <p>Lorem ipsum <b>dolor sit amet consectetur adipisicing</b> elit. Nesciunt deleniti illum nam cupiditate <sub>accusantium culpa eaque alias</sub> commodi laudantium voluptas perspiciatis amet quod tempora, ut exercitationem quasi placeat harum reprehenderit!</p>
-                    <p>Lorem ipsum dolor sit <b>amet consectetur adipisicing elit. Nesciunt deleniti</b> illum nam cupiditate accusantium culpa eaque alias commodi laudantium voluptas perspiciatis amet quod tempora, ut exercitationem quasi placeat harum reprehenderit!</p>
+                    <p>Lorem ipsum <b>dolor sit amet co nse cte tur adipisicing</b> elit. Nesc iunt delen iti illum n am cu pidita te <sub>accu santium culpa eaque alias</sub> commodi laudantium voluptas perspiciatis amet quod tempora, ut exercitationem quasi placeat harum reprehenderit!</p>
+                    <p>Lorem ipsum do lor sit <b>amet con sect et ur ad ip is ici ng el it. Nes ciu nt delen iti</b> il lum nam cu pidit ate a ccu san tiu m cu lpa eaque alias commodi laudantium voluptas perspiciatis amet quod tempora, ut exercitationem quasi placeat harum reprehenderit!</p>
                 </div>
             </div>
         </div>
@@ -26,8 +26,8 @@
             <div id="bloco-r">
                 <img src="pascoa.png"/>
                 <div>
-                    <p><i>Lorem ipsum</i> dolor sit amet consectetur adipisicing elit. Nesciunt <sup>deleniti illum nam cupiditate</sup> accusantium culpa eaque alias commodi laudantium voluptas perspiciatis amet quod tempora, ut exercitationem quasi placeat harum reprehenderit!</p>
-                    <p><i>Lorem ipsum</i> dolor sit amet consectetur adipisicing elit. Nesciunt deleniti illum nam cupiditate accusantium culpa eaque alias commodi laudantium voluptas perspiciatis amet quod tempora, ut exercitationem quasi placeat harum reprehenderit!</p>
+                    <p><i>Lorem ipsum</i> dolor sit amet consec<br>tetur adipisicing elit. Nesciunt <sup>deleni%ti illum na^&m cupidi-tate</sup> accusantium cul-pa eaque alias comm-odi laudantium volupta-s perspiciatis amet quod tempora, ut exercitationem quasi placeat harum reprehenderit!</p>
+                    <p><i>Lorem ipsum</i> dolor sit amet consectetur adipisicing elit. Nesciunt delen<br>iti illum nam c$%upiditate accu-s-antium culpa eaque al-ias commo-*di laudanti*um vol-uptas pe-rspiciatis a!@-met quod temp$%ora, ut exercitationem quasi placeat harum reprehenderit!</p>
                 </div>
             </div>
         </div>
@@ -35,8 +35,8 @@
             <div id="bloco-l">
                 <img src="pascoa.png"/>
                 <div>
-                    <p>Lorem ipsum <b>dolor sit amet consectetur adipisicing</b> elit. Nesciunt deleniti <br>illum nam cupiditate <del>accusantium culpa eaque</del> alias commodi laudantium <br>voluptas perspiciatis amet quod tempora, ut exercitationem quasi placeat harum reprehenderit!</p>
-                    <p>Lorem ipsum dolor sit <b>amet consectetur adipisicing elit. Nesciunt deleniti</b> illum nam cupiditate accusantium culpa eaque alias commodi laudantium voluptas perspiciatis amet quod tempora, ut exercitationem quasi placeat harum reprehenderit!</p>
+                    <p>Lorem ipsum <b>dolor sit amet consectetur adipisicing</b> elit. Nesciunt deleniti <br>illum nam cupiditate <del>accusantium culpa eaque</del> alias commodi lau@dantium <br>voluptas pers*&piciatis amet quod tempora, ut exercitation&^%$em quasi placeat harum reprehenderit!</p>
+                    <p>Lorem ipsum dolor sit <b>amet consectetur adipisicing elit. Nesciunt deleniti</b> illum nam cupiditate accusantium culpa eaque alias co@@mmodi laudantium voluptas perspic#$iatis amet quod tem%%pora, ut exercitationem quasi pl%|$aceat harum reprehenderit!</p>
                 </div>
             </div>
         </div>
