--- a/atividade-pascoa/pascoa_mundo.html
+++ b/atividade-pascoa/pascoa_mundo.html
@@ -17,8 +17,8 @@
             <div id="bloco-l">
                 <img src="pascoa.png"/>
                 <div>
-                    <p>Lorem ipsum <b>dolor sit amet co nse cte tur adipisicing</b> elit. Nesc iunt delen iti illum n am cu pidita te <sub>accu santium culpa eaque alias</sub> commodi laudantium voluptas perspiciatis amet quod tempora, ut exercitationem quasi placeat harum reprehenderit!</p>
-                    <p>Lorem ipsum do lor sit <b>amet con sect et ur ad ip is ici ng el it. Nes ciu nt delen iti</b> il lum nam cu pidit ate a ccu san tiu m cu lpa eaque alias commodi laudantium voluptas perspiciatis amet quod tempora, ut exercitationem quasi placeat harum reprehenderit!</p>
+                    <p>Lorem ipsum <b>dolor sit amet co nse cte &nbsp;tur adipisicing</b> elit. Nesc &nbsp;iunt delen iti illum n am cu pidita te <sub>accu santium culpa&nbsp; eaque alias</sub> commodi laudantium vol&nbsp;uptas perspiciatis amet quod tempora, ut exercitationem quasi placeat harum reprehenderit!</p>
+                    <p>Lorem ip&nbsp;sum do lor sit <b>amet c&nbsp;on sect et ur ad &nbsp;ip is ici ng el it. Nes ciu &nbsp;nt delen iti</b> il lum nam cu pidit ate a ccu sa&nbsp;n tiu m cu lpa eaque alias commodi laudantium voluptas perspiciatis &nbsp;amet quod tempora, ut exercitationem quasi placeat harum reprehenderit!</p>
                 </div>
             </div>
         </div>
@@ -26,8 +26,8 @@
             <div id="bloco-r">
                 <img src="pascoa.png"/>
                 <div>
-                    <p><i>Lorem ipsum</i> dolor sit amet consec<br>tetur adipisicing elit. Nesciunt <sup>deleni%ti illum na^&m cupidi-tate</sup> accusantium cul-pa eaque alias comm-odi laudantium volupta-s perspiciatis amet quod tempora, ut exercitationem quasi placeat harum reprehenderit!</p>
-                    <p><i>Lorem ipsum</i> dolor sit amet consectetur adipisicing elit. Nesciunt delen<br>iti illum nam c$%upiditate accu-s-antium culpa eaque al-ias commo-*di laudanti*um vol-uptas pe-rspiciatis a!@-met quod temp$%ora, ut exercitationem quasi placeat harum reprehenderit!</p>
+                    <p><i>Lorem ipsum</i> dolor si&nbsp;t amet consec<br>tet&nbsp;ur adipisicing elit. &nbsp;Nesciunt <sup>deleni%ti il&nbsp;lum na^&m cupidi-tate</sup> accusan&nbsp;tium cul-pa eaque a&nbsp;lias comm-odi laudantium volup&nbsp;ta-s perspiciatis a&nbsp;met quod tempora, ut exercitat&nbsp;ionem quasi placeat harum re&nbsp;prehenderit!</p>
+                    <p><i>Lorem ipsum</i> &nbsp;dolor sit amet consectetur ad&nbsp;ipisici&nbsp;ng elit. Nesciunt delen<br>iti illum nam c$%upiditate accu-s-&nbsp;antium culpa eaque al-i&nbsp;as commo-*di laudanti*um vol&nbsp;-uptas pe-rspiciatis a!@&nbsp;-met quod temp$%ora, ut exer&nbsp;citationem qu&nbsp;asi placeat harum re&nbsp;prehenderit!</p>
                 </div>
             </div>
         </div>
