--- a/loja_celular/xiaomi.html
+++ b/loja_celular/xiaomi.html
@@ -1,41 +1,41 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Play Tecnologia</title>
+    <title>Xiaomi - Play Tecnologia</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="estilo-home.css">
+    <link rel="stylesheet" href="estilo-samsung.css">
   </head>
   <body>
     <header>
       <h1>Play Tecnologia</h1>
       <nav>
         <ul>
+          <li><a href="index.html">Home</a></li>
           <li><a href="apple.html">Apple</a></li>
           <li><a href="samsung.html">Samsung</a></li>
-          <li><a href="xiaomi.html">Xiaomi</a></li>
         </ul>
       </nav>
     </header>
     <main>
-      <h2>Últimos Lançamentos</h2>
+      <h2>Últimos Lançamentos Xiaomi</h2>
         <section class="product">
-          <img src="assets/site.png" alt="Celular 1">
-          <h3>Apple iPhone 14 Pro Max</h3>
-          <p>R$ 10.430,00</p>
+          <img src="assets/xiaomi airdots.png" alt="airdots">
+          <h3>Xiaomi Redmi AirDots</h3>
+          <p>R$700,00</p>
         </section>
         <section class="product">
-          <img src="assets/s23.png" alt="Celular 2">
-          <h3>Samsung Galaxy S23 Ultra</h3>
-          <p>R$ 9.299,00</p>
-        </section>
-        <section class="product">
-          <img src="assets/xiaomi.png" alt="Celular 3">
+          <img src="assets/xiaomi.png" alt="mi10t">
           <h3>Xiaomi Redmi Note 10T 5G</h3>
+          <p>R$ 2.299,00</p>
+        </section>
+        <section class="product">
+          <img src="assets/poco.png" alt="poco">
+          <h3>Xiaomi PocoPhone Poco M5s</h3>
           <p>R$ 1.499,00</p>
         </section>
         <section class="product">
-          <img src="assets/m51.png" alt="Celular 4">
-          <h3>Samsung Galaxy M51</h3>
+          <img src="assets/xiaomi12lite.png" alt="12lite">
+          <h3>Xiaomi 12 Lite</h3>
           <p>R$ 1.345,00</p>
         </section>
     </main>
