atividade-tema-livre

--- a/loja_celular/index.html
+++ b/loja_celular/index.html
@@ -19,7 +19,7 @@
     <main>
       <h2>Últimos Lançamentos</h2>
         <section class="product">
-          <img src="assets/site.png" alt="Celular 1">
+          <img src="assets/site.png" alt="iphone 14">
           <h3>Apple iPhone 14 Pro Max</h3>
           <p>R$ 10.430,00</p>
         </section>
